# Supervisor_WebUI

./: .gitmodules  Cargo.toml  LICENSE.txt  readme.md
supervisor_webui/: Cargo.toml
supervisor_webui/src/: api_info.rs  main.rs
supervisor_webui/web/: index.html  main.js  style.css
