[package]
name = "supervisor_webui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
lazy_static = "1.4.0"
rust-embed = "8.1.0"
serde = "1.0.193"
serde_json = "1.0.108"
futures = "0.3.29"
lazy-regex = "3.1.0"
reqwest = { version = "0.11.22", features = ["stream"] }
dxr_client = { version = "0.6.1", features = ["reqwest"] }
supervisor_xmlrpc = { path = "../supervisor_xmlrpc" }